--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Product Page</title>
 
     <link rel="stylesheet" href="./style.css">
+
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="main-container">
